--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -28,6 +28,10 @@ jobs:
     # if: github.event.repository.owner.id == github.event.sender.id 	
     
     steps:
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: latest-stable
+        
     - name: Checkout
       uses: actions/checkout@master
       
