--- a/.github/workflows/v8.yml
+++ b/.github/workflows/v8.yml
@@ -14,8 +14,8 @@ on:
   #   types: started
 
 env:
-  PATCH_FLAG: false
-  COMMIT: 0
+  PATCH_FLAG: true
+  COMMIT: 568979f4d891bafec875fab20f608ff9392f4f29
   DEPOT_UPLOAD: false
   SRC_UPLOAD: true
   BINARY_UPLOAD: false
@@ -25,7 +25,6 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-18.04
-    if: github.event.repository.owner.id == github.event.sender.id 	
     
     steps:
     - name: Checkout
@@ -62,6 +61,8 @@ jobs:
       run: |
         source ~/.bash_profile
         gclient sync -f
+        tools/dev/v8gen.py x64.debug -vv
+        ninja -C out.gn/x64.debug d8
     
     # compress this file
     - name: zip depot_tools
